# Tensorrt8.5.2_CPP

./: CMakeLists.txt  main.cpp  readme.md
include/: tensorrt_inference.h  utils.h
src/: CMakeLists.txt  tensorrt_inference.cpp  utils.cpp
